--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
-import Card from '../components/Card.astro'
+import Button from '../components/Button.astro'
+import Header from '../components/Header.astro'
+import Colors from '../enums/colors'
 ---
 
 <!doctype html>
@@ -12,18 +14,7 @@ import Card from '../components/Card.astro'
     <title>Sepe Awards</title>
   </head>
   <body class='h-screen bg-black-pearl text-black-pearl'>
-    <header class='flex flex-row gap-7 bg-cotton-candy p-5 text-2xl'>
-      <div class='h-10 w-10 rounded-full bg-white'></div>
-
-      <nav class='flex items-center justify-center gap-7'>
-        <a href='#'>Vota</a>
-        <a href='#'>Categorias</a>
-      </nav>
-      <div class='flex-grow'></div>
-      <button type='button' class='px-3 py-1 ring-2 ring-black-pearl'>
-        Discord
-      </button>
-    </header>
+    <Header />
     <div
       class='flex h-4/6 flex-col items-center bg-cotton-candy [clip-path:polygon(0%_0%,0%_83.34%,50%_100%,100%_83.34%,100%_0%)]'
     >
@@ -34,11 +25,13 @@ import Card from '../components/Card.astro'
         AWARDS
       </h1>
     </div>
-    <button
-      type='button'
-      class='mx-auto mt-14 block bg-cotton-candy px-8 py-3 text-7xl font-semibold text-black-pearl opacity-100 shadow-[-10px_10px_black,-10px_10px_0_2px_rgb(148,189,202)] transition-all hover:-translate-x-5 hover:translate-y-2 hover:shadow-none hover:transition-all'
+    <Button
+      color={Colors.CottonCandy}
+      variant={'solid'}
+      size={'xl'}
+      customClasses='mx-auto mt-14 block font-semibold opacity-100 shadow-[-10px_10px_black,-10px_10px_0_2px_rgb(148,189,202)] transition-all hover:-translate-x-5 hover:translate-y-2 hover:shadow-none hover:transition-all'
     >
       Vota aquí
-    </button>
+    </Button>
   </body>
 </html>
