--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,37 +1,26 @@
 ---
 import Button from '../components/Button.astro'
-import Header from '../components/Header.astro'
 import Colors from '../enums/colors'
+import Layout from '../layouts/Layout.astro'
 ---
 
-<!doctype html>
-<html lang='es'>
-  <head>
-    <meta charset='UTF-8' />
-    <meta name='description' content='Astro description' />
-    <meta name='viewport' content='width=device-width' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-    <title>Sepe Awards</title>
-  </head>
-  <body class='h-screen bg-black-pearl text-black-pearl'>
-    <Header />
-    <div
-      class='flex h-4/6 flex-col items-center bg-cotton-candy [clip-path:polygon(0%_0%,0%_83.34%,50%_100%,100%_83.34%,100%_0%)]'
+<Layout title='Sepe Awards' description='TBD'>
+  <div
+    class='flex h-4/6 flex-col items-center bg-cotton-candy [clip-path:polygon(0%_0%,0%_83.34%,50%_100%,100%_83.34%,100%_0%)]'
+  >
+    <h2 class='text-5xl font-black tracking-wide'>CHOCHOLOCO</h2>
+    <h1
+      class='bg-gradient-to-b from-black bg-clip-text text-[11rem] font-black tracking-wide text-transparent opacity-50 [line-height:1]'
     >
-      <h2 class='text-5xl font-black tracking-wide'>CHOCHOLOCO</h2>
-      <h1
-        class='bg-gradient-to-b from-black bg-clip-text text-[11rem] font-black tracking-wide text-transparent opacity-50 [line-height:1]'
-      >
-        AWARDS
-      </h1>
-    </div>
-    <Button
-      color={Colors.CottonCandy}
-      variant={'solid'}
-      size={'xl'}
-      customClasses='mx-auto mt-14 block font-semibold opacity-100 shadow-[-10px_10px_black,-10px_10px_0_2px_rgb(148,189,202)] transition-all hover:-translate-x-5 hover:translate-y-2 hover:shadow-none hover:transition-all'
-    >
-      Vota aquí
-    </Button>
-  </body>
-</html>
+      AWARDS
+    </h1>
+  </div>
+  <Button
+    color={Colors.CottonCandy}
+    variant={'solid'}
+    size={'xl'}
+    customClasses='mx-auto mt-14 block font-semibold opacity-100 shadow-[-10px_10px_black,-10px_10px_0_2px_rgb(148,189,202)] transition-all hover:-translate-x-5 hover:translate-y-2 hover:shadow-none hover:transition-all'
+  >
+    Vota aquí
+  </Button>
+</Layout>
