Adding voting page with components & assets

--- a/src/components/Candidate.astro
+++ b/src/components/Candidate.astro
@@ -1,14 +1,14 @@
 ---
-const { category, image, title, href, id } = Astro.props
-
 const colors = {
-  bg: '#ffb8cf80',
-  bgSelection: '#f967679f',
-  ringSelection: 'carnation-500',
-  textSelection: 'white',
-  playButton: 'glacier',
-  playButtonHover: 'dandelion'
+  bg: 'bg-[#ffb8cf80]',
+  bgSelection: 'bg-[#f967679f]',
+  ringSelection: 'has-[:checked]:border-carnation-500',
+  textSelection: 'text-white',
+  playButton: 'bg-glacier',
+  playButtonHover: 'hover:bg-dandelion'
 }
+
+const { category, image, title, href, id } = Astro.props
 ---
 
 <style>
@@ -26,7 +26,7 @@ const colors = {
   class=`labl border-2 border-transparent p-1
   transition-all ease-in-out
   hover:cursor-pointer
-  has-[:checked]:border-2 has-[:checked]:border-${colors.ringSelection}
+  has-[:checked]:border-2 ${colors.ringSelection}
   has-[:checked]:transition-all
   [&>div>.title]:has-[:checked]:flex
   [&>div>img]:has-[:checked]:blur-[2px]`
@@ -34,7 +34,7 @@ const colors = {
   <input type='checkbox' name={category} value={id} />
   <div
     class=`flex h-[13.5rem] w-[24rem] justify-center
-    bg-[${colors.bg}] align-middle`
+    ${colors.bg} align-middle`
   >
     <!-- IMAGEN -->
     <img
@@ -44,13 +44,13 @@ const colors = {
     <!-- OVERLAY DE SELECCION -->
     <div
       class=`title absolute hidden h-[13.5rem] w-[24rem] flex-wrap
-        items-center justify-center bg-[${colors.bgSelection}]`
+        items-center justify-center ${colors.bgSelection}`
     >
       <!-- NOMBRE DEL CLIP/NOMINADO -->
       <h1
         class=`m-0
           truncate text-wrap p-2 text-3xl font-semibold
-          text-${colors.textSelection} transition-all ease-in-out`
+          ${colors.textSelection} transition-all ease-in-out`
       >
         {title}
       </h1>
@@ -64,7 +64,7 @@ const colors = {
     >
       <svg
         class={`absolute m-1 h-5 w-5 rounded-full p-1
-        bg-${colors.playButton}  hover:bg-${colors.playButtonHover}`}
+        ${colors.playButton} ${colors.playButtonHover}`}
         viewBox='0 0 98.883118 98.883118'
         version='1.1'
         id='svg5'
