--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,19 @@
 ---
 import Button from './Button.astro'
 import Colors from './../enums/colors'
+
+interface Props {
+  Color_bg: string
+  Color_text: string
+}
+
+const { Color_bg, Color_text } = Astro.props
 ---
 
-<header class='flex flex-row gap-7 bg-cotton-candy p-5 text-2xl'>
+<header class=`flex flex-row gap-7 ${Color_bg} p-5 text-2xl`>
   <div class='h-10 w-10 rounded-full bg-white'></div>
 
-  <nav class='flex items-center justify-center gap-7'>
+  <nav class=`flex items-center justify-center gap-7 ${Color_text}`>
     <a href='#'>Vota</a>
     <a href='#'>Categorias</a>
   </nav>
