--- a/src/pages/categorias/[categoria].astro
+++ b/src/pages/categorias/[categoria].astro
@@ -1,10 +1,10 @@
 ---
 import Candidate from '../../components/Candidate.astro'
-import VotingLayout from '../../layouts/VotingLayout.astro'
+import Layout from '../../layouts/Layout.astro'
 
 // IMPORTAR LISTAS DE PRUEBA
-import Categories from '../../enums/categories'
-import Candidates from '../../enums/candidates'
+import Categories from '../../data/testing/categories'
+import Candidates from '../../data/testing/candidates'
 
 // CARGA CANDIDATOS Y LINKS A CATEGORIAS PREV Y SIG
 export async function getStaticPaths() {
@@ -41,104 +41,114 @@ const candidate4 = Astro.props.Candidate_4
 const prev = Astro.props.m_prev
 const next = Astro.props.m_next
 
-const colors = {
-  text: 'cotton-candy',
-  pagination: 'text-glacier-100',
-  voteButton: 'bg-cotton-candy',
-  voteButtonRing: 'shadow-[-10px_10px_black,-10px_10px_0_2px_rgb(255,184,208)]',
-  voteButtonSelection: 'from-cotton-candy to-cotton-candy-400'
-}
+//FORMATO DE TITULO
+
+const span_format = `hidden lg:block bg-cotton-candy self-end mb-[12px] h-[4px]`
 ---
 
-<VotingLayout title={title} description='Votaciones'>
-  <div class='mt-20 grid items-center justify-center gap-y-20'>
-    <!-- TITULO DE CATEGORIA -->
-    <div class='title flex flex-col items-center'>
-      <h1
-        class=`underline lg:no-underline text-[4rem] font-semibold tracking-wide text-${colors.text}`
-      >
-        {title}
-      </h1>
-      <span class=`block lg:w-[51rem] h-[4px] bg-${colors.text}`></span>
-    </div>
-
-    <!-- FORMULARIO DE VOTACION -->
-    <form
-      class='flex w-screen flex-col gap-8 min-[1569px]:mt-20 min-[1569px]:gap-48 [&>div>input]:has-[:checked]:bg-gradient-to-tr'
-      action='#'
-      method='#'
-    >
-      <!-- CANDIDATOS -->
-      <div class='flex flex-wrap justify-center gap-2 self-center'>
-        <div class='flex flex-wrap justify-center gap-2 self-center'>
-          <Candidate
-            categoria={title}
-            title={candidate1[0]}
-            image={candidate1[1]}
-            href={candidate1[2]}
-            id='1'
-          />
-          <Candidate
-            categoria={title}
-            title={candidate2[0]}
-            image={candidate2[1]}
-            href={candidate2[2]}
-            id='2'
-          />
-        </div>
-        <div class='flex flex-wrap justify-center gap-2 self-center'>
-          <Candidate
-            categoria={title}
-            title={candidate3[0]}
-            image={candidate3[1]}
-            href={candidate3[2]}
-            id='3'
-          />
-          <Candidate
-            categoria={title}
-            title={candidate4[0]}
-            image={candidate4[1]}
-            href={candidate4[2]}
-            id='4'
-          />
+<Layout
+  title={title}
+  description='Votaciones'
+  background='bg-gradient-to-r from-[#05303A] to-black-pearl'
+  headerColor_bg='bg-transparent'
+  headerColor_text='text-cotton-candy'
+>
+  <!-- Peepo background -->
+  <div
+    class="absolute bg-[url('../../assets/Prayge.svg')] bg-bottom bg-no-repeat"
+  >
+    <div class='mt-32 grid items-center justify-center gap-y-20'>
+      <!-- TITULO DE CATEGORIA -->
+      <div class='flex justify-center'>
+        <div class='grid-cols-[1fr_auto_1fr] lg:grid 2xl:w-[40%]'>
+          <div class=`${span_format}`></div>
+          <h1
+            class=`text-[4rem] font-semibold text-cotton-candy tracking-wide underline`
+          >
+            {title}
+          </h1>
+          <span class=`${span_format}`></span>
         </div>
       </div>
-
-      <!-- BOTONES DE NAVEGACION Y CONFIRMACION -->
-      <div class='flex justify-between sm:px-28'>
-        <!-- BOTON PREV -->
-        <a href={prev} class=`px-5 text-[1.75rem] ${colors.pagination}`
-          ><div
-            class="h-16 w-20
-          bg-[url('../../assets/arrow.svg')] bg-no-repeat"
-          >
+      <!-- FORMULARIO DE VOTACION -->
+      <form
+        class='flex w-screen flex-col gap-8 min-[1569px]:mt-20 min-[1569px]:gap-48 [&>div>button]:has-[:checked]:bg-gradient-to-tr'
+        action='#'
+        method='#'
+      >
+        <!-- CANDIDATOS -->
+        <div class='flex flex-wrap justify-center gap-2 self-center'>
+          <div class='flex flex-wrap justify-center gap-2 self-center'>
+            <Candidate
+              categoria={title}
+              title={candidate1.nominado}
+              image={candidate1.img}
+              href={candidate1.url}
+              id='1'
+            />
+            <Candidate
+              categoria={title}
+              title={candidate2.nominado}
+              image={candidate2.img}
+              href={candidate2.url}
+              id='2'
+            />
           </div>
-          Prev
-        </a>
-        <!-- BOTON VOTAR -->
-        <input
-          type='button'
-          value='Votar'
-          class=`cursor-pointer ${colors.voteButton}
-        ${colors.voteButtonSelection} px-16 max-h-16 font-bold tracking-wide
-        ${colors.voteButtonRing}
+          <div class='flex flex-wrap justify-center gap-2 self-center'>
+            <Candidate
+              categoria={title}
+              title={candidate3.nominado}
+              image={candidate3.img}
+              href={candidate3.url}
+              id='3'
+            />
+            <Candidate
+              categoria={title}
+              title={candidate4.nominado}
+              image={candidate4.img}
+              href={candidate4.url}
+              id='4'
+            />
+          </div>
+        </div>
+
+        <!-- BOTONES DE NAVEGACION Y CONFIRMACION -->
+        <div class='flex justify-between sm:px-28'>
+          <!-- BOTON PREV -->
+          <a href={prev} class=`px-5 text-[1.75rem] text-glacier-100`
+            ><div
+              class="h-16 w-20
+          bg-[url('../../assets/arrow.svg')] bg-no-repeat"
+            >
+            </div>
+            Prev
+          </a>
+          <!-- BOTON VOTAR -->
+          <button
+            type='button'
+            value='Votar'
+            class=`cursor-pointer bg-cotton-candy
+        from-cotton-candy to-cotton-candy-400 px-16 max-h-16 font-bold tracking-wide
+        shadow-[-10px_10px_black,-10px_10px_0_2px_rgb(255,184,208)]
       
         transition-all hover:-translate-x-5 hover:translate-y-2
         hover:shadow-none hover:transition-all text-[2rem]`
-        />
-        <!-- BOTON SIG -->
-        <a
-          href={next}
-          class=`px-5 text-[1.75rem] ${colors.pagination}
-      text-center`
-          ><div
-            class="h-16 w-20 rotate-180
-        bg-[url('../../assets/arrow.svg')] bg-no-repeat"
+            >Votar</button
           >
-          </div>
-          Sig
-        </a>
-      </div>
-    </form>
+          <!-- BOTON SIG -->
+          <a
+            href={next}
+            class=`px-5 text-[1.75rem] text-glacier-100
+      text-center`
+            ><div
+              class="h-16 w-20 rotate-180
+        bg-[url('../../assets/arrow.svg')] bg-no-repeat"
+            >
+            </div>
+            Sig
+          </a>
+        </div>
+      </form>
+    </div>
   </div>
-</VotingLayout>
+</Layout>
