Welcome and operation sections

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import Button from './Button.astro'
 import Colors from './../enums/colors'
+import Discord from './icons/Discord.astro'
 ---
 
 <header class='flex flex-row gap-7 bg-cotton-candy p-5 text-2xl'>
@@ -12,6 +13,9 @@ import Colors from './../enums/colors'
   </nav>
   <div class='flex-grow'></div>
   <Button color={Colors.BlackPearl} variant={'outline'} size={'md'}>
-    Discord
+    <div class='flex'>
+      <Discord class='mr-2 size-10' />
+      <span>Discord</span>
+    </div>
   </Button>
 </header>
