--- a/src/pages/categorias/[categoria].astro
+++ b/src/pages/categorias/[categoria].astro
@@ -43,7 +43,7 @@ const next = Astro.props.m_next
 
 //FORMATO DE TITULO
 
-const span_format = `hidden lg:block bg-cotton-candy self-end mb-[12px] h-[4px]`
+const span_format = `hidden lg:block bg-cotton-candy self-end mb-[11px] h-[4px]`
 ---
 
 <Layout
@@ -55,9 +55,9 @@ const span_format = `hidden lg:block bg-cotton-candy self-end mb-[12px] h-[4px]`
 >
   <!-- Peepo background -->
   <div
-    class="absolute bg-[url('../../assets/Prayge.svg')] bg-bottom bg-no-repeat"
+    class="absolute bg-[url('../../assets/Prayge.svg')] bg-[_80%_80%] bg-bottom bg-no-repeat"
   >
-    <div class='mt-32 grid items-center justify-center gap-y-20'>
+    <div class='gap-y-18 mt-20 grid items-center justify-center'>
       <!-- TITULO DE CATEGORIA -->
       <div class='flex justify-center'>
         <div class='grid-cols-[1fr_auto_1fr] lg:grid 2xl:w-[40%]'>
