--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,6 @@ const categories: Category[] = [
 ]
 const items = [
   {
-    title: null,
     text: 'El evento constará de 3 fases, en cada una podrás participar para hacer que tu clip-momento llegue a la cima.',
     active: true
   },
@@ -46,7 +45,7 @@ const items = [
   <div
     class='flex h-4/6 flex-col items-center bg-cotton-candy [clip-path:polygon(0%_0%,0%_83.34%,50%_100%,100%_83.34%,100%_0%)]'
   >
-    <h2 class='text-5xl font-black tracking-wide'>CHOCHOLOCO</h2>
+    <h2 class='text-5xl font-black tracking-wide'>SEPE</h2>
     <h1
       class='bg-gradient-to-b from-black bg-clip-text text-[11rem] font-black tracking-wide text-transparent opacity-50 [line-height:1]'
     >
