--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,11 +11,11 @@ interface Props {
 const { href, title, body } = Astro.props
 ---
 
-<div class='flex h-[450px] flex-col bg-cotton-candy p-5'>
-  <div class='grow'><!-- TODO: Aquí irá la info de la categoría --></div>
-  <div class='text-center'>
-    <Button customClasses='mt-3' size='xs' color={Colors.BlackPearl}
-      >Ver más</Button
-    >
-  </div>
+<div
+  class='flex h-[450px] flex-col items-center justify-center bg-cotton-candy p-5'
+>
+  <div class='grow'></div>
+  <Button customClasses='mt-3' size='xs' color={Colors.BlackPearl}
+    >Ver más</Button
+  >
 </div>
