--- a/src/components/LinkedList.astro
+++ b/src/components/LinkedList.astro
@@ -27,7 +27,7 @@ const { items } = Astro.props
   }
 </ul>
 
-<!-- TODO: Consider to move these styles to tailwind -->
+<!-- TODO: Consider to move these styles to tailwind or isolate it -->
 <style>
   .linked-list {
     list-style: none;
