--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ const items = [
     Vota aquí
   </Button>
 
-  <SectionContainer className='pb-24 pt-44' id='2'>
+  <SectionContainer className=' mt-44' id='2'>
     <Jumbotron bgImage={bgSepe1} extraClasses='justify-center pl-20'>
       <div class='w-2/5 text-2xl leading-7'>
         <p class='mb-2 text-4xl'>
@@ -88,7 +88,7 @@ const items = [
   </SectionContainer>
 
   <!-- Categories -->
-  <SectionContainer className='pb-24 pt-44' id='4'>
+  <SectionContainer className='px-16 pb-24 pt-44' id='4'>
     <div class='flex gap-10'>
       {
         categories.map((cat) => (
