--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Colors from './../enums/colors'
 import Discord from './icons/Discord.astro'
 ---
 
-<header class='flex flex-row gap-7 bg-cotton-candy p-5 text-2xl'>
+<header class='flex flex-row items-center gap-7 bg-cotton-candy p-5 text-2xl'>
   <div class='h-10 w-10 rounded-full bg-white'></div>
 
   <nav class='flex items-center justify-center gap-7'>
