feat: 🎸 some details

--- a/src/components/Candidate.astro
+++ b/src/components/Candidate.astro
@@ -42,6 +42,7 @@ const { category, image, title, href, id } = Astro.props
       target='_blank'
       rel='noopener noreferrer'
     >
+      <!-- TODO: Move this to component -->
       <svg
         class={`absolute m-1 h-5 w-5 rounded-full p-1
         bg-glacier hover:bg-dandelion`}
