--- a/src/pages/categorias/index.astro
+++ b/src/pages/categorias/index.astro
@@ -16,7 +16,7 @@ const pageTitle = 'Categorias'
   headerColor_bg='bg-transparent'
   headerColor_text='text-cotton-candy'
 >
-  <div class='mt-20 grid items-center justify-center gap-y-28'>
+  <div class='grid items-center justify-center gap-y-28'>
     <!-- TITULO DE CATEGORIA -->
     <div class='flex justify-center'>
       <h1 class=`text-[4rem] font-semibold text-cotton-candy tracking-wide`>
