--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const items = [
 ]
 ---
 
-<Layout title='Sepe Awards' description='TBD'>
+<Layout title='Sepe Awards' description='TBD' showSocials>
   <div
     class='flex h-4/6 flex-col items-center bg-cotton-candy [clip-path:polygon(0%_0%,0%_83.34%,50%_100%,100%_83.34%,100%_0%)]'
   >
