--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,8 @@
 import Button from './Button.astro'
 import Colors from './../enums/colors'
 import Discord from './icons/Discord.astro'
+import Login from './Login.astro'
+import { getSession } from "auth-astro/server"
 
 interface Props {
   Color_bg: string
@@ -9,7 +11,8 @@ interface Props {
   showSocials?: boolean
 }
 
-const { Color_bg, Color_text, showSocials } = Astro.props
+const { Color_bg, Color_text, showSocials, showLogin } = Astro.props
+const logged = await getSession(Astro.request)
 ---
 
 <header class=`flex flex-row items-center gap-7 p-5 text-2xl ${Color_bg}`>
@@ -39,4 +42,8 @@ const { Color_bg, Color_text, showSocials } = Astro.props
       </a>
     )
   }
+    {!logged ? (
+      <Login></Login>
+    ) : (<p>Sesión iniciada</p>)
+    }
 </header>
