--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,29 +14,34 @@ const { Color_bg, Color_text, showSocials } = Astro.props
 
 <header class=`flex flex-row items-center gap-7 p-5 text-2xl ${Color_bg}`>
   <a href='/'>
-    <div class='h-10 w-10 rounded-full bg-white'></div>
-  </a>
-
-  <nav class=`flex items-center justify-center gap-7 ${Color_text}`>
-    <!-- <a href='#'>Vota</a> -->
-    <a href='/categorias'>Categorias</a>
-  </nav>
-  <div class='flex-grow'></div>
-  {
-    showSocials && (
-      <a
-        href='https://discordapp.com/invite/zeling
-  '
-        target='_blank'
-        rel='noopener noreferrer'
+    <div class='h-10 w-10 rounded-full bg-[radial-gradient(#000,#0000)]'>
+      <div
+        class="h-10 w-10 bg-[url('/peepoZeling.webp')] bg-[_80%_80%] bg-center bg-no-repeat"
       >
-        <Button color={Colors.BlackPearl} variant={'outline'} size={'md'}>
-          <div class='flex'>
-            <Discord class='mr-2 size-10' />
-            <span>Discord</span>
-          </div>
-        </Button>
-      </a>
-    )
-  }
+      </div>
+    </div>
+
+    <nav class=`flex items-center justify-center gap-7 ${Color_text}`>
+      <!-- <a href='#'>Vota</a> -->
+      <a href='/categorias'>Categorias</a>
+    </nav>
+    <div class='flex-grow'></div>
+    {
+      showSocials && (
+        <a
+          href='https://discordapp.com/invite/zeling
+  '
+          target='_blank'
+          rel='noopener noreferrer'
+        >
+          <Button color={Colors.BlackPearl} variant={'outline'} size={'md'}>
+            <div class='flex'>
+              <Discord class='mr-2 size-10' />
+              <span>Discord</span>
+            </div>
+          </Button>
+        </a>
+      )
+    }
+  </a>
 </header>
