--- a/src/pages/categorias/[categoria].astro
+++ b/src/pages/categorias/[categoria].astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true
+
 import Candidate from '../../components/Candidate.astro'
 import Layout from '../../layouts/Layout.astro'
 
