--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true
+
 import Button from '../components/Button.astro'
 import Card from '../components/Card.astro'
 import Colors from '../enums/colors'
