--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,8 +56,8 @@ const items = [
   </div>
   <Button
     color={Colors.CottonCandy}
-    variant={'solid'}
-    size={'xl'}
+    variant='solid'
+    size='xl'
     customClasses='mx-auto mt-14 block font-semibold opacity-100 shadow-[-10px_10px_black,-10px_10px_0_2px_rgb(148,189,202)] transition-all hover:-translate-x-5 hover:translate-y-2 hover:shadow-none hover:transition-all'
   >
     Vota aquí
