--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,7 +93,7 @@ const items = [
   <SectionContainer className='px-16 pb-24 pt-44' id='4'>
     <div class='flex gap-10'>
       {
-        categories.map((cat) => (
+        categories.map((_cat) => (
           <div class='grow'>
             <Card body='hello world' href='/' title='XD' />
           </div>
