--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,7 +8,7 @@ interface Props {
   href: string
 }
 
-const { href, title, body } = Astro.props
+//const { href, title, body } = Astro.props
 ---
 
 <div
