--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,6 +12,7 @@ interface Props {
 
 const { Color_bg, Color_text, showSocials } = Astro.props
 const session = await getSession(Astro.request)
+console.log(session)
 const showSignOut = import.meta.env.SHOW_SIGN_OUT
 ---
 
