chore: 🤖 debug session

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,6 +41,7 @@ const showSignOut = import.meta.env.SHOW_SIGN_OUT
       </Button>
     )
   }
+  <p>{JSON.stringify(session, null, 2)}</p>
   {
     session ? (
       <>
