--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,10 @@
 ---
-export const prerender = true
 import Button from './Button.astro'
 import Colors from './../enums/colors'
 import Discord from './icons/Discord.astro'
-import { getSession } from 'auth-astro/server'
+import { Auth } from '@auth/core'
+import type { Session } from '@auth/core/types'
+import authConfig from 'auth:config'
 
 interface Props {
   Color_bg: string
@@ -12,6 +13,30 @@ interface Props {
 }
 
 const { Color_bg, Color_text, showSocials } = Astro.props
+
+export async function getSession(
+  req: Request,
+  options = authConfig
+): Promise<Session | null> {
+  // @ts-ignore
+  options.secret ??= import.meta.env.AUTH_SECRET
+  options.trustHost ??= true
+
+  const url = new URL(`${options.prefix}/session`, req.url)
+  const response = await Auth(
+    new Request(url, { headers: req.headers }),
+    options
+  )
+  const { status = 200 } = response
+
+  const data = await response.json()
+
+  console.log(data, status)
+
+  if (!data || !Object.keys(data).length) return null
+  if (status === 200) return data
+  throw new Error(data.message)
+}
 
 const session = await getSession(Astro.request)
 const showSignOut = import.meta.env.SHOW_SIGN_OUT
@@ -42,7 +67,6 @@ const showSignOut = import.meta.env.SHOW_SIGN_OUT
       </Button>
     )
   }
-  <p>{JSON.stringify(session, null, 2)}</p>
   {
     session ? (
       <>
