--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,8 @@ interface Props {
 
 const { Color_bg, Color_text, showSocials } = Astro.props
 
+console.debug('si imprime desde el header')
+
 export async function getSession(
   req: Request,
   options = authConfig
