--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,6 +41,8 @@ const items = [
     text: 'Se presentarán a los ganadores de cada categoría.'
   }
 ]
+
+console.log('variable ' + Astro.locals.variable)
 ---
 
 <Layout title='Sepe Awards' description='TBD' showSocials>
